# dynamic-object-rs

./: BUILD.bazel  Cargo.toml  README.md  build.bzl
derive/: Cargo.toml
derive/src/: lib.rs
dynamic/: Cargo.toml
dynamic/src/: lib.rs  typing.rs
src/: lib.rs  typing.rs
