load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_proc_macro")

rust_library(
      name = "dynamic-object",
      srcs = [
            "src/lib.rs",
            "src/typing.rs",
      ],
      proc_macro_deps = [
            ":dynamic-object-derive"
      ],
      visibility = ["//visibility:public"],
)

rust_proc_macro(
      name = "dynamic-object-derive",
      srcs = [
            "derive/src/lib.rs"
      ],
      deps = [
            "@quote",
            "@syn",
            "@uuid"
      ],
      visibility = ["//visibility:public"],
)

rust_test(
      name = "dynamic-test",
      crate = ":dynamic"
)
