[package]
name = "dynamic-object"
version = "0.1.0"
edition = "2021"
keywords = ["oop", "object oriented", "inheritance"]
exclude = ["BUILD.bazel", "build.bzl", ".gitignore"]
descriptions = "Inheritance for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.dynamic-object-derive]
path = "./derive"
version = "0.1.0"
