[package]
name = "dynamic-object-derive"
version = "0.1.2"
edition = "2021"
description = "Proc macro for crate dynamic-object"
license = "MIT"
repository = "https://github.com/Frost-54/dynamic-object-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = ["full", "fold"] }
quote = "1.0.21"
uuid = {version = "1.1.2", features = ["v4"] }